; ModuleID = '/home/carl/AnghaBench/rufus/src/extr_stdio.c_StrError.c'
source_filename = "/home/carl/AnghaBench/rufus/src/extr_stdio.c_StrError.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @StrError(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = call i32 (...) @toggle_default_locale()
  br label %10

10:                                               ; preds = %8, %2
  %11 = load i32, i32* %3, align 4
  %12 = call i8* @_StrError(i32 %11)
  store i8* %12, i8** %5, align 8
  %13 = load i64, i64* %4, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = call i32 (...) @toggle_default_locale()
  br label %17

17:                                               ; preds = %15, %10
  %18 = load i8*, i8** %5, align 8
  ret i8* %18
}

declare dso_local i32 @toggle_default_locale(...) #1

declare dso_local i8* @_StrError(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
